<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="118dp"
        android:layout_height="118dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:src="@mipmap/demo_head"
        app:civ_border_color="@color/lightBoard"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toStartOf="@+id/RightBound"
        app:layout_constraintStart_toStartOf="@+id/leftBound"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_account_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/ic_name"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/account_name"
        android:inputType="textPersonName"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textColor="@color/提示文字"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/RightBound"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftBound"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <android.support.constraint.Guideline
        android:id="@+id/leftBound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <android.support.constraint.Guideline
        android:id="@+id/RightBound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <EditText
        android:id="@+id/edit_account_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textColor="@color/提示文字"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/RightBound"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftBound"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_name" />


    <Button
        android:id="@+id/quick_mode_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:stateListAnimator="@null"
        android:text="@string/quick_mode"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_button"
        app:layout_constraintStart_toStartOf="@+id/leftBound"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/button_background"
        android:letterSpacing="0.5"
        android:stateListAnimator="@null"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/quick_mode_button"
        app:layout_constraintEnd_toStartOf="@+id/RightBound"
        app:layout_constraintStart_toEndOf="@+id/quick_mode_button"
        app:layout_constraintTop_toTopOf="@+id/quick_mode_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_accounts"
        android:textColor="@color/提示文字"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/leftBound"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_password" />

    <TextView
        android:clickable="true"
        android:id="@+id/text_what_is_this"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/what_is_this"
        android:textColor="@color/提示文字"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/RightBound"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/version"
        android:textColor="@color/lightBoard"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightBound"
        app:layout_constraintStart_toStartOf="@+id/leftBound" />


</android.support.constraint.ConstraintLayout>
