<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_device_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/device_name"
            android:textColor="@color/提示文字"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/item_device_note_title"
            app:layout_constraintEnd_toEndOf="@+id/item_device_note_title"
            app:layout_constraintStart_toStartOf="@+id/item_device_note_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_device_note_title"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_name"
            android:textColor="@color/提示文字"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/mac_address"
            android:textColor="@color/提示文字"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_device_image"
            app:layout_constraintTop_toBottomOf="@+id/item_device_note_title" />

        <TextView
            android:id="@+id/item_device_name"
            android:maxLines="1"
            android:maxWidth="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:textColor="@color/正文"
            app:layout_constraintBottom_toTopOf="@+id/item_device_note"
            app:layout_constraintEnd_toEndOf="@+id/item_device_note"
            app:layout_constraintStart_toStartOf="@+id/item_device_note"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/item_device_note"
            android:maxLines="1"
            android:maxWidth="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/正文"
            app:layout_constraintBottom_toTopOf="@+id/item_device_mac"
            app:layout_constraintEnd_toEndOf="@+id/item_device_mac"
            app:layout_constraintStart_toStartOf="@+id/item_device_mac"
            app:layout_constraintTop_toBottomOf="@+id/item_device_name" />

        <TextView
            android:id="@+id/item_device_mac"
            android:maxLines="1"
            android:maxWidth="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="12dp"
            android:text="00:00:00:00:00:00"
            android:textColor="@color/正文"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_chat_button"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/item_device_note" />

        <ImageButton
            android:id="@+id/item_setting_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_setting" />

        <ImageButton
            android:id="@+id/item_chat_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_setting_button"
            app:srcCompat="@drawable/ic_send_information" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <Button
            android:id="@+id/item_button_start"
            android:stateListAnimator="@null"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_button_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/item_button_end"
            android:stateListAnimator="@null"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_button_start"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>